[tool.poetry]
name = "mtcnn"
version = "0.1.0"
description = "MTCNN face detection implementation for TensorFlow, as a PIP package."
authors = ["Iván de Paz Centeno"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.2.0"
tensorflow = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
